# SU-HPC-Fall-2024

./: CMakeLists.txt  README.md
LR1/: Graphics.nb  README.md  a.exp  matrixMul.cu
LR2/: Output.txt  Output.xlsx  README.md  Vector.cu  a.exp
LR3/: Filter.cu  README.md  a.exp
LR4/: README.md  a.exp  camera.h  cameraold.h  hitable.h  hitable_list.h  maybe.cu  ray.h  raytracing.cu  sphere.h  vec3.h
LR5/: Bilateral.cu  README.md  a.exp
